refactor core (in core classpath) and shared (in each module's classpath) libs.